# tic80-stitcher

./: .gitignore  LICENSE  README.md  make_cartridge.py  setup.cfg  setup.py
tic_cart/: __main__.py  main.py
