[metadata]
name = tic-cart
version = 0.1.0
description = Stitch Tic-80 fantasy console cartridges together from code and asset files
license = MIT
readme = README.md
homepage = https://github.com/jahodfra/tic80-stitcher
repository = https://github.com/jahodfra/tic80-stitcher

authors =
    Frantisek Jahoda <frantisek.jahoda@gmail.com>
    Peter Hillerström <peter.hillerstrom@gmail.com>

keywords =
    Tic-80
    bundler
    fantasy console
    game development
    packaging

classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Topic :: Games/Entertainment
    Topic :: Software Development :: Build Tools
    Topic :: Software Development

[dependencies]
Pillow = ^8.3.0

[options]
packages = find:
python_requires = >=3.6.0

[options.entry_points]
console_scripts =
    tic-cart = tic_cart.main:main

[options.packages.find]
exclude =
    test*
